exports[`Post should exist 1`] = `
<section
  className="post"
  itemScope={true}
  itemType="http://schema.org/BlogPosting">
  <article
    className="post-content"
    id="scroll"
    itemProp="articleBody"
    role="article">
    <p>
      <a
        onClick={[Function bound handleClick]}
        style={Object {}}>
        <  Back to Posts
      </a>
    </p>
    <div>
      <p>
        hello\\n\\nworld
      </p>
    </div>
    <p
      style={
        Object {
          "textAlign": "center"
        }
      }>
      <a
        onClick={[Function bound handleClick]}
        style={Object {}}>
        <  Back to Posts
      </a>
    </p>
  </article>
  <section
    className="author"
    itemProp="author">
    <div
      className="details"
      itemScope={true}
      itemType="http://schema.org/Person">
      <img
        alt="Jake Dawkins"
        className="img-rounded"
        itemProp="image"
        src="http://content.jakedawkins.com/layout/selfportrait.png" />
      <p
        className="def">
        Author
      </p>
      <h3
        className="name">
        <a
          itemProp="name"
          onClick={[Function bound handleClick]}
          style={Object {}}>
          Jake Dawkins
        </a>
      </h3>
      <p
        className="desc">
        Developer | Engineer
      </p>
      <a
        className="email"
        href="mailto:dawkinsjh@gmail.com"
        itemProp="email">
        dawkinsjh@gmail.com
      </a>
    </div>
  </section>
</section>
`;

exports[`Post should render props correctly 1`] = `
<section
  className="post"
  itemScope={true}
  itemType="http://schema.org/BlogPosting">
  <article
    className="post-content"
    id="scroll"
    itemProp="articleBody"
    role="article">
    <div>
      <p>
        hello\\n\\nworld
      </p>
    </div>
  </article>
</section>
`;
